--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_add_transaction">AddTransaction</string>
+    <string name="title_activity_receipt_photo">ReceiptPhotoActivity</string>
 </resources>
