--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_add_transaction">AddTransaction</string>
     <string name="title_activity_receipt_photo">ReceiptPhotoActivity</string>
+    <string name="title_activity_budget_edit">BudgetEditActivity</string>
 </resources>
